--- a/umap/static/umap/locale/br.json
+++ b/umap/static/umap/locale/br.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "Gweredekaat ar mod diaporama",
     "Add a layer": "Ouzhpennañ ur gwiskad",
     "Add a line to the current multi": "Ouzhpennañ ul linenn d'ar strollad a-vremañ",
-    "Add a new property": "Ouzhpennañ ur perzh nevez",
     "Add a polygon to the current multi": "Ouzhpennañ ul lieskorn d'ar strollad a-vremañ",
     "Add image URL": "Ouzhpennañ URL ar skeudenn",
     "Advanced actions": "Oberoù araokaet",
@@ -29,7 +28,6 @@
     "Animated transitions": "Tremenoù buhezek",
     "Are you sure you want to clone this map and all its datalayers?": "Ha sur oc'h e faot deoc'h doublañ ar gartenn-mañ hag hec'h holl wiskadoù roadennoù?",
     "Are you sure you want to delete this map?": "Ha sur oc'h e faot deoc'h dilemel ar gartenn-mañ?",
-    "Are you sure you want to delete this property on all the features?": "Ha sur oc'h a faot deoc'h lemel ar perzh-mañ diwar an holl elfennoù?",
     "Are you sure you want to restore this version?": "Ha sur oc'h e faot deoc'h adsevel ar stumm-mañ?",
     "Attach the map to my account": "Stagañ ar gartenn d'am c'hont",
     "attribution": "deroadur",
@@ -71,7 +69,7 @@
     "Clustering radius": "Clustering radius",
     "collapsed": "serret",
     "color": "liv",
-    "Comma separated list of numbers, including min and max values.": "Comma separated list of numbers, including min and max values.",
+    "Comma separated list of numbers, including min and max values.": "Roll an niveroù disrannet gant skejoù, en o zouez an talvoudoù bihanañ ha brasañ.",
     "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.": "Comma separated list of properties to use for sorting features. To reverse the sort, put a minus sign (-) before. Eg. mykey,-otherkey.",
     "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the begining of the header, case insensitive. All other column are imported as properties.": "Comma, tab or semi-colon separated values. SRS WGS84 is implied. Only Point geometries are imported. The import will look at the column headers for any mention of «lat» and «lon» at the begining of the header, case insensitive. All other column are imported as properties.",
     "Congratulations, your map has been created!": "Gourc'hemennoù, ho kartenn zo bet krouet!",
@@ -157,7 +155,6 @@
     "Format": "Furmad",
     "From zoom": "Adalek ar zoum",
     "full backup": "gwarez klok",
-    "Generic": "Standard",
     "GeoRSS (only link)": "GeoRSS (liamm hepken)",
     "GeoRSS (title + image)": "GeoRSS (titl + skeudenn)",
     "Go to \"{coords}\"": "Mont da \"{coords}\"",
@@ -273,11 +270,10 @@
     "Please be sure the licence is compliant with your use.": "Gwiriit m'az oc'h aotreet da implijout ar roadennoù-mañ mar plij.",
     "Please choose a format": "Diuzit ur furmad mar plij",
     "Please enter the name of the property": "Enankit anv ar perzh mar plij",
-    "Please enter the new name of this property": "Enankit anv nevez ar perzh-mañ mar plij",
     "Please save the map first": "Ret eo deoc'h enrollañ ar gartenn da gentañ",
     "Popup (large)": "Diflugell (vras)",
     "Popup content style": "Neuz endalc'had an diflugell",
-    "Popup content template": "Popup content template",
+    "Popup content template": "Patrom endalc'had ar popup",
     "Popup shape": "Stumm an diflugell",
     "Popup": "Diflugell",
     "Powered by uMap": "Lusket gant uMap",
@@ -406,7 +402,6 @@
     "Until": "Betek",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Skouer: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Kemmañ e-barzh OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Cannot determine latitude and longitude columns.",
     "Back to layers": "Distreiñ d'ar gwiskadoù",
     "Filters": "Siloù",
     "Comma separated list of properties to use when filtering features by text input": "Comma separated list of properties to use when filtering features by text input",
@@ -462,7 +457,7 @@
     "Expression": "Expression",
     "Geometry mode": "Mod mentoniezh",
     "Only geometry centers": "Only geometry centers",
-    "Search area": "Search area",
+    "Search area": "Takad klask",
     "Type area name, or let empty to load data in current map view": "Type area name, or let empty to load data in current map view",
     "Data successfully imported!": "Roadennoù enporzhiet gant berzh!",
     "Clear data": "Skarzhañ ar roadennoù",
@@ -472,10 +467,10 @@
     "Category property": "Perzh",
     "Color palette": "Color palette",
     "Categories": "Rummadoù",
-    "Comma separated list of categories.": "Comma separated list of categories.",
+    "Comma separated list of categories.": "Roll ar rummadoù disrannet gant skejoù.",
     "Categories mode": "Categories mode",
-    "Remove filter for this column": "Remove filter for this column",
-    "Add filter for this column": "Add filter for this column",
+    "Remove filter for this column": "Tennañ ar sil diouzh ar bann-mañ",
+    "Add filter for this column": "Ouzhpennañ ur sil d'ar bann-mañ",
     "Rename this column": "Adenvel ar bann-mañ",
     "Delete this column": "Dilemel ar bann-mañ",
     "Name “{name}” should not contain a dot.": "Ne rankfe ket bout ur pik e-barzh an anv “{name}”.",
@@ -493,7 +488,7 @@
     "Max circle radius": "Skin brasañ ar c'helc'h",
     "Display the open browser control": "Display the open browser control",
     "Copy as GeoJSON": "Eilañ evel ur restr GeoJSON",
-    "Please zoom in to edit the geometry": "Please zoom in to edit the geometry",
+    "Please zoom in to edit the geometry": "Zoumit evit kemmañ ar c'heometriezh mar plij",
     "New map": "Kartenn nevez",
     "My maps": "Ma c'hartennoù",
     "My teams": "Ma skipailhoù",
@@ -513,9 +508,9 @@
     "Successfully imported {count} feature(s)": "{count} elfenn bet enporzhiet gant berzh",
     "Disconnected": "Digennasket",
     "You must be logged in": "Ret eo deoc'h bezañ kennasket",
-    "on hover": "pa dremen al logodenn war-c'hore",
-    "Cannot load remote data for layer \"{layer}\" with url \"{url}\"": "Cannot load remote data for layer \"{layer}\" with url \"{url}\"",
-    "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"": "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"",
+    "on hover": "pa dremen al logodenn war-c'horre",
+    "Cannot load remote data for layer \"{layer}\" with url \"{url}\"": "N'haller ket kargañ roadennoù ar gwiskad \"{layer}\" gant an URL \"{url}\"",
+    "Cannot parse remote data for layer \"{layer}\" with url \"{url}\"": "N'haller ket lenn roadennoù ar gwiskad \"{layer}\" gant an URL \"{url}\"",
     "Import failed: invalid data": "Enporzhiadur c'hwitet: roadennoù direizh",
     "Anonymous": "Dizanv",
     "created at {date}": "bet krouet d'an {date}",
@@ -560,21 +555,30 @@
     "Load map template": "Kargañ patrom ar gartenn",
     "My templates": "Ma fatromoù",
     "From staff": "Erbedet",
-    "From community": "Eus ar gumuniezh",
+    "From community": "A-berzh ar gumuniezh",
     "You must select a template.": "Dav eo deoc'h diuzañ ur patrom.",
-    "Line decoration": "Line decoration",
+    "Line decoration": "Kinkladur al linenn",
     "Reuse this template": "Adimplij ar patrom-mañ",
     "Create a new map using this template": "Krouiñ ur gartenn nevez en ur implij ar patrom-mañ",
     "Save template": "Enrollañ ar patrom",
     "Load template": "Kargañ ar patrom",
     "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
-    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
-    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
-    "There is no public template yet.": "There is no public template yet.",
-    "Explore": "Explore",
-    "Import data from public open data portals": "Import data from public open data portals",
-    "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first."
+    "Load template with data": "Kargañ ar patrom gant ar roadennoù",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "N'ho peus ket enrollet ur patrom c'hoazh. Gallout a rit ouzhpennañ ur patrom dre grouiñ ur gartenn nevez ha lakaat un dikedenn \"patrom\" warnañ.",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "N'eus patrom erbedet ebet c'hoazh. Ar patromoù erbedet zo patromoù a zo bet spilhennet gant merourien uMap.",
+    "There is no public template yet.": "N'eus porrastell publik ebet c'hoazh.",
+    "Explore": "Ergerzhout",
+    "Import data from public open data portals": "Enporzhiañ roadennoù diouzh porrastelloù o roadennoù frank a wirioù",
+    "Choose a portal": "Diuzañ ur porrastell",
+    "Limit results to current map view": "Bevennañ an disoc'hoù d'ar pezh a zo gwelet bremañ",
+    "Please choose an instance first.": "Dibabit ur porrastell da gentañ.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
