--- a/umap/static/umap/locale/ca.json
+++ b/umap/static/umap/locale/ca.json
@@ -16,20 +16,18 @@
     "Activate slideshow mode": "Activa el mode de presentació",
     "Add a layer": "Afegeix una capa",
     "Add a line to the current multi": "Add a line to the current multi",
-    "Add a new property": "Add a new property",
     "Add a polygon to the current multi": "Add a polygon to the current multi",
     "Add image URL": "Add image URL",
     "Advanced actions": "Opcions avançades",
     "Advanced properties": "Propietats avançades",
     "All data and settings of the map": "Totes les dades i configuracions del mapa",
     "All properties are imported.": "S'han importat totes les propietats",
-    "Allow interactions": "Allow interactions",
+    "Allow interactions": "Permetre interaccions",
     "Allow scroll wheel zoom?": "Voleu permetre el zoom amb la roda de desplaçament?",
     "always": "sempre",
     "Animated transitions": "Transicions animades",
     "Are you sure you want to clone this map and all its datalayers?": "Esteu segur de voler clonar aquest mapa i totes les capes de dades?",
     "Are you sure you want to delete this map?": "Esteu segur de voler suprimir aquest mapa?",
-    "Are you sure you want to delete this property on all the features?": "Are you sure you want to delete this property on all the features?",
     "Are you sure you want to restore this version?": "Are you sure you want to restore this version?",
     "Attach the map to my account": "Adjunta el mapa al meu compte",
     "attribution": "atribució",
@@ -149,7 +147,7 @@
     "Extract shape to separate feature": "Extract shape to separate feature",
     "Feature identifier key": "Clau identificadora de element",
     "Feature properties": "Feature properties",
-    "Fetch data each time map view changes.": "Fetch data each time map view changes.",
+    "Fetch data each time map view changes.": "Obtén dades cada vegada que canvia la vista del mapa.",
     "fill color": "emplena el color",
     "fill opacity": "opacitat d'emplenament",
     "fill": "emplena",
@@ -157,7 +155,6 @@
     "Format": "Format",
     "From zoom": "Del zoom",
     "full backup": "còpia de seguretat completa",
-    "Generic": "Generic",
     "GeoRSS (only link)": "GeoRSS (només enllaç)",
     "GeoRSS (title + image)": "GeoRSS (títol i imatge)",
     "Go to \"{coords}\"": "Go to \"{coords}\"",
@@ -175,7 +172,7 @@
     "icon opacity": "opacitat de la icona",
     "Icon shape": "forma de la icona",
     "Icon symbol": "Imatge de la icona",
-    "If false, the polygon or line will act as a part of the underlying map.": "If false, the polygon or line will act as a part of the underlying map.",
+    "If false, the polygon or line will act as a part of the underlying map.": "Si és fals, el polígon o la línia actuaran com a part del mapa subjacent.",
     "Iframe with custom height (in px): {{{https://iframe.url.com|height}}}": "Iframe amb alçada personalitzada (height en px): {{{https://iframe.url.com|height}}}",
     "Iframe with custom height and width (in px): {{{https://iframe.url.com|height*width}}}": "Iframe amb alçada i amplada personalitzada (height i width en px): {{{https://iframe.url.com|height*width}}}",
     "iframe": "iframe",
@@ -188,7 +185,7 @@
     "Include full screen link?": "Voleu incloure l'enllaç a pantalla completa?",
     "Inherit": "Hereta",
     "inherit": "heretat",
-    "Interaction options": "Interaction options",
+    "Interaction options": "Opcions d'interacció",
     "Invalid latitude or longitude": "Invalid latitude or longitude",
     "Invalid umap data in {filename}": "Invalid umap data in {filename}",
     "Invalid umap data": "Invalid umap data",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Assegureu-vos que la llicència és compatible amb l'ús que en feu.",
     "Please choose a format": "Please choose a format",
     "Please enter the name of the property": "Introduïu el nom de la propietat",
-    "Please enter the new name of this property": "Introduïu el nom d'aquesta propietat",
     "Please save the map first": "Abans deseu el mapa",
     "Popup (large)": "Finestra emergent (gran)",
     "Popup content style": "Estil del contingut de la finestra emergent",
@@ -325,7 +321,7 @@
     "Street": "Street",
     "stroke": "línia",
     "Supported scheme": "Esquema suportat",
-    "Supported variables that will be dynamically replaced": "Supported variables that will be dynamically replaced",
+    "Supported variables that will be dynamically replaced": "Variables compatibles que es substituiran dinàmicament",
     "Symbol": "Symbol",
     "Table": "Taula",
     "Text color for the cluster label": "Text color for the cluster label",
@@ -334,7 +330,7 @@
     "The name of the property to use as feature unique identifier.": "El nom de la propietat que s'utilitzarà com a identificador únic de la característica",
     "The zoom and center have been modified.": "L'escala i el centre s'han modificat.",
     "TMS format": "Format TMS",
-    "To use if remote server doesn't allow cross domain (slower)": "To use if remote server doesn't allow cross domain (slower)",
+    "To use if remote server doesn't allow cross domain (slower)": "Per utilitzar si el servidor remot no permet l'interdomini (cross domain) ((més lent))",
     "To zoom": "A l'escala",
     "Toggle edit mode (⇧+Click)": "Activa o desactiva el mode d'edició (⇧+clic)",
     "Toggle edit mode": "Activa o desactiva el mode d'edició",
@@ -406,7 +402,6 @@
     "Until": "Until",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Exemple: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Edita a OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Cannot determine latitude and longitude columns.",
     "Back to layers": "Back to layers",
     "Filters": "Filtres",
     "Comma separated list of properties to use when filtering features by text input": "Comma separated list of properties to use when filtering features by text input",
@@ -524,7 +519,7 @@
     "Default latitude": "Latitud predeterminada",
     "Default longitude": "Longitud predeterminada",
     "Edit map default view": "Edita la visualització predeterminada del mapa",
-    "Use current center and zoom": "Use current center and zoom",
+    "Use current center and zoom": "Utilitza el centre actual i fes zoom",
     "Layer permalink": "Layer permalink",
     "Back to home": "Back to home",
     "Home logo": "Home logo",
@@ -543,5 +538,47 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Text color",
+    "Text offset": "Text offset",
+    "Text position": "Text position",
+    "start": "start",
+    "center": "center",
+    "end": "end",
+    "Text repeat": "Text repeat",
+    "Text rotate": "Text rotate",
+    "Text size": "Text size",
+    "Load map template": "Load map template",
+    "My templates": "My templates",
+    "From staff": "From staff",
+    "From community": "From community",
+    "You must select a template.": "You must select a template.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
