--- a/umap/static/umap/locale/da.json
+++ b/umap/static/umap/locale/da.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "Aktiver fremvisningstilstand",
     "Add a layer": "Tilføj et lag",
     "Add a line to the current multi": "Tilføj en linje til nuværende multi",
-    "Add a new property": "Tilføj en ny egenskab",
     "Add a polygon to the current multi": "Tilføj en polygon til aktuel multi",
     "Add image URL": "Tilføj billed-URL",
     "Advanced actions": "Avancerede handlinger",
@@ -29,7 +28,6 @@
     "Animated transitions": "Animerede overgange",
     "Are you sure you want to clone this map and all its datalayers?": "Er du sikker på du vil klone dette kort og alle dets datalag?",
     "Are you sure you want to delete this map?": "Er du sikker på, at du vil slette dette kort?",
-    "Are you sure you want to delete this property on all the features?": "Er du sikker på du vil slette denne egenskab på alle objekter?",
     "Are you sure you want to restore this version?": "Er du sikker på, at du vil genskabe denne version?",
     "Attach the map to my account": "Knyt kortet til min konto",
     "attribution": "kreditering",
@@ -157,7 +155,6 @@
     "Format": "Format",
     "From zoom": "Fra zoom",
     "full backup": "fuld backup",
-    "Generic": "Generisk",
     "GeoRSS (only link)": "GeoRSS (kun link)",
     "GeoRSS (title + image)": "GeoRSS (titel + billede)",
     "Go to \"{coords}\"": "Gå til \"{coords}\"",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Sørg for, at licensen er kompatibel med din anvendelse.",
     "Please choose a format": "Vælg et format",
     "Please enter the name of the property": "Angiv egenskabens navn",
-    "Please enter the new name of this property": "Angiv egenskabens nye navn",
     "Please save the map first": "Gem først kortet",
     "Popup (large)": "Popup (stor)",
     "Popup content style": "Popup-indholdsstil",
@@ -406,7 +402,6 @@
     "Until": "Indtil",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Eksempel: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Rediger i OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Kan ikke bestemme bredde- og længdegradskolonner.",
     "Back to layers": "Tilbage til lag",
     "Filters": "Filtre",
     "Comma separated list of properties to use when filtering features by text input": "Kommasepareret liste over egenskaber, der skal bruges til at filtrere objekter efter tekstinput",
@@ -576,5 +571,14 @@
     "Import data from public open data portals": "Importer data fra offentlige åbne dataportaler",
     "Choose a portal": "Vælg en portal",
     "Limit results to current map view": "Begræns resultaterne til den aktuelle kortvisning",
-    "Please choose an instance first.": "Vælg en instans først."
+    "Please choose an instance first.": "Vælg en instans først.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
