--- a/umap/static/umap/locale/el.json
+++ b/umap/static/umap/locale/el.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "Ενεργοποίηση λειτουργίας παρουσίασης",
     "Add a layer": "Προσθήκη επιπέδου",
     "Add a line to the current multi": "Προσθήκη γραμμής στο παρόν πολυδεδομένο",
-    "Add a new property": "Προσθήκη νέας ιδιότητας",
     "Add a polygon to the current multi": "Προσθήκη πολυγώνου στο παρόν πολυδεδομένο",
     "Add image URL": "Προσθήκη URL εικόνας",
     "Advanced actions": "Εξειδικευμένες ενέργειες",
@@ -29,7 +28,6 @@
     "Animated transitions": "Κινούμενες μεταβάσεις",
     "Are you sure you want to clone this map and all its datalayers?": "Θέλετε σίγουρα να κλωνοποιηθεί αυτός ο χάρτης και όλα τα επίπεδα δεδομένων του;",
     "Are you sure you want to delete this map?": "Θέλετε σίγουρα να διαγραφεί αυτός ο χάρτης;",
-    "Are you sure you want to delete this property on all the features?": "Θέλετε σίγουρα να διαγραφεί αυτή η ιδιότητα από όλα τα στοιχεία;",
     "Are you sure you want to restore this version?": "Θέλετε σίγουρα να γίνει επαναφορά αυτής της έκδοσης;",
     "Attach the map to my account": "Σύνδεση του χάρτη με τον λογαριασμό μου",
     "attribution": "Αναφορά",
@@ -157,7 +155,6 @@
     "Format": "Μορφοποίηση",
     "From zoom": "Από εστίαση",
     "full backup": "πλήρες αντίγραφο ασφαλείας",
-    "Generic": "Γενικός",
     "GeoRSS (only link)": "GeoRSS (μόνο σύνδεσμος)",
     "GeoRSS (title + image)": "GeoRSS (τίτλος + εικόνα)",
     "Go to \"{coords}\"": "Πήγαινε στις \"{coords}\"",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Παρακαλώ βεβαιωθείτε ότι η άδεια είναι σύμφωνη με την χρήση σας",
     "Please choose a format": "Παρακαλώ επιλέξτε μια μορφοποίηση",
     "Please enter the name of the property": "Παρακαλώ εισαγάγετε το όνομα της ιδιότητας",
-    "Please enter the new name of this property": "Παρακαλώ εισαγάγετε το νέο όνομα αυτής της ιδιότητας",
     "Please save the map first": "Παρακαλώ αποθηκεύστε τον χάρτη πρώτα",
     "Popup (large)": "Αναδυόμενο (μεγάλο)",
     "Popup content style": "Στυλ περιεχομένου αναδυόμενου",
@@ -406,7 +402,6 @@
     "Until": "Μέχρι",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Παράδειγμα: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Επεξεργασία στο OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Δεν είναι δυνατός ο προσδιορισμός των στηλών γεωγραφικού πλάτους και γεωγραφικού μήκους.",
     "Back to layers": "Πίσω στις στρώσεις",
     "Filters": "Φίλτρα",
     "Comma separated list of properties to use when filtering features by text input": "Λίστα ιδιοτήτων διαχωρισμένων με κόμμα, που θα χρησιμοποιηθούν κατά το φιλτράρισμα χαρακτηριστικών με εισαγωγή κειμένου.",
@@ -558,17 +553,32 @@
     "Text rotate": "Text rotate",
     "Text size": "Text size",
     "Load map template": "Load map template",
-    "Use a template to initialize your map": "Use a template to initialize your map",
     "My templates": "My templates",
     "From staff": "From staff",
     "From community": "From community",
-    "Include template data, if any": "Include template data, if any",
-    "Load this template": "Load this template",
-    "Open": "Open",
     "You must select a template.": "You must select a template.",
     "Line decoration": "Line decoration",
     "Reuse this template": "Reuse this template",
     "Create a new map using this template": "Create a new map using this template",
     "Save template": "Save template",
-    "Load template": "Load template"
+    "Load template": "Load template",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
