--- a/umap/static/umap/locale/is.json
+++ b/umap/static/umap/locale/is.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "Virkja skyggnusýningarham",
     "Add a layer": "Bæta við þekju",
     "Add a line to the current multi": "Bæta línu við fyrirliggjandi hóp",
-    "Add a new property": "Bæta við nýju eigindi",
     "Add a polygon to the current multi": "Bæta marghyrningi við fyrirliggjandi hóp",
     "Add image URL": "Bæta við slóð á mynd",
     "Advanced actions": "Ítarlegri aðgerðir",
@@ -29,7 +28,6 @@
     "Animated transitions": "Millifærslur með hreyfingu",
     "Are you sure you want to clone this map and all its datalayers?": "Ertu viss um að þú viljir klóna þetta kort og allar gagnaþekjur þess?",
     "Are you sure you want to delete this map?": "Ertu viss um að þú viljir eyða þessu korti?",
-    "Are you sure you want to delete this property on all the features?": "Ertu viss um að þú viljir eyða þessu eigindi á öllum fitjum?",
     "Are you sure you want to restore this version?": "Ertu viss um að vilja endurheimta þessa útgáfu?",
     "Attach the map to my account": "Tengja kortið við notandaaðganginn minn",
     "attribution": "tilvísun í höfund/a",
@@ -157,7 +155,6 @@
     "Format": "Snið",
     "From zoom": "Úr aðdráttarstigi",
     "full backup": "full backup",
-    "Generic": "Algengt",
     "GeoRSS (only link)": "GeoRSS (aðeins tengill)",
     "GeoRSS (title + image)": "GeoRSS (titill + mynd)",
     "Go to \"{coords}\"": "Fara á \"{coords}\"",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Gakktu úr skugga um að notkunarleyfið samsvari notkunasviði þínu.",
     "Please choose a format": "Veldu snið",
     "Please enter the name of the property": "Settu inn heiti á eigindið",
-    "Please enter the new name of this property": "Settu inn nýja heitið á þetta eigindi",
     "Please save the map first": "Vistaðu fyrst kortið",
     "Popup (large)": "Sprettgluggi (stór)",
     "Popup content style": "Stíll efnis í sprettglugga",
@@ -406,7 +402,6 @@
     "Until": "Til",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Example: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Breyta á OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Cannot determine latitude and longitude columns.",
     "Back to layers": "Til baka í þekjur",
     "Filters": "Síur",
     "Comma separated list of properties to use when filtering features by text input": "Kommu-aðgreindur listi yfir eigindi sem notaður er við síun fitja með textainnslætti",
@@ -543,5 +538,47 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Text color",
+    "Text offset": "Text offset",
+    "Text position": "Text position",
+    "start": "start",
+    "center": "center",
+    "end": "end",
+    "Text repeat": "Text repeat",
+    "Text rotate": "Text rotate",
+    "Text size": "Text size",
+    "Load map template": "Load map template",
+    "My templates": "My templates",
+    "From staff": "From staff",
+    "From community": "From community",
+    "You must select a template.": "You must select a template.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
