--- a/umap/static/umap/locale/ko.json
+++ b/umap/static/umap/locale/ko.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "슬라이드 쇼 모드 활성화",
     "Add a layer": "레이어 추가",
     "Add a line to the current multi": "현재 무늬에 선 추가",
-    "Add a new property": "새로운 속성 추가",
     "Add a polygon to the current multi": "현재 무늬에 도형 추가",
     "Add image URL": "Add image URL",
     "Advanced actions": "고급 동작",
@@ -29,7 +28,6 @@
     "Animated transitions": "Animated transitions",
     "Are you sure you want to clone this map and all its datalayers?": "정말 이 지도와 모든 데이터 레이어를 복제하시겠습니까?",
     "Are you sure you want to delete this map?": "정말 이 지도를 삭제하시겠습니까?",
-    "Are you sure you want to delete this property on all the features?": "정말 이 속성을 모든 지물에서 삭제하시겠습니까?",
     "Are you sure you want to restore this version?": "정말 이 버전을 복원하시겠습니까?",
     "Attach the map to my account": "지도를 계정에 첨부",
     "attribution": "attribution",
@@ -157,7 +155,6 @@
     "Format": "Format",
     "From zoom": "From zoom",
     "full backup": "full backup",
-    "Generic": "Generic",
     "GeoRSS (only link)": "GeoRSS(링크만)",
     "GeoRSS (title + image)": "GeoRSS(제목 + 이미지)",
     "Go to \"{coords}\"": "Go to \"{coords}\"",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Please be sure the licence is compliant with your use.",
     "Please choose a format": "Please choose a format",
     "Please enter the name of the property": "Please enter the name of the property",
-    "Please enter the new name of this property": "Please enter the new name of this property",
     "Please save the map first": "Please save the map first",
     "Popup (large)": "Popup (large)",
     "Popup content style": "Popup content style",
@@ -406,7 +402,6 @@
     "Until": "Until",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Example: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Edit in OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Cannot determine latitude and longitude columns.",
     "Back to layers": "Back to layers",
     "Filters": "Filters",
     "Comma separated list of properties to use when filtering features by text input": "Comma separated list of properties to use when filtering features by text input",
@@ -543,5 +538,47 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Text color",
+    "Text offset": "Text offset",
+    "Text position": "Text position",
+    "start": "start",
+    "center": "center",
+    "end": "end",
+    "Text repeat": "Text repeat",
+    "Text rotate": "Text rotate",
+    "Text size": "Text size",
+    "Load map template": "Load map template",
+    "My templates": "My templates",
+    "From staff": "From staff",
+    "From community": "From community",
+    "You must select a template.": "You must select a template.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
