--- a/umap/static/umap/locale/cs_CZ.json
+++ b/umap/static/umap/locale/cs_CZ.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "Aktivovat prezentační mód",
     "Add a layer": "Přidat vrstvu",
     "Add a line to the current multi": "Přidat čáru k současnému multi",
-    "Add a new property": "Přidat novou vlastnost",
     "Add a polygon to the current multi": "Přidat polygon k současnému multi",
     "Add image URL": "Přidat URL obrázku",
     "Advanced actions": "Pokročilé akce",
@@ -29,7 +28,6 @@
     "Animated transitions": "Animované přechody",
     "Are you sure you want to clone this map and all its datalayers?": "Určitě chcete vytvořit kopii celé této mapy a všech jejich vrstev?",
     "Are you sure you want to delete this map?": "Jste si jisti, že chcete vymazat tuto celou mapu?",
-    "Are you sure you want to delete this property on all the features?": "Určitě chcete smazat tuto vlastnost na všech objektech?",
     "Are you sure you want to restore this version?": "Opravdu si přejete obnovit tuto verzi?",
     "Attach the map to my account": "Připojte mapu k mému účtu",
     "attribution": "autorství",
@@ -157,7 +155,6 @@
     "Format": "Formát",
     "From zoom": "Maximální oddálení",
     "full backup": "plná záloha",
-    "Generic": "Generický",
     "GeoRSS (only link)": "GeoRSS (jen odkaz)",
     "GeoRSS (title + image)": "GeoRSS (titulek + obrázek)",
     "Go to \"{coords}\"": "Přejít na „{coords}“",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Prosíme ujistěte se, že licence je ve shodě s tím jak mapu používáte.",
     "Please choose a format": "Zvolte formát",
     "Please enter the name of the property": "Zadejte prosím název vlastnosti",
-    "Please enter the new name of this property": "Zadejte prosím nový název této vlastnosti",
     "Please save the map first": "Prosím, nejprve uložte mapu",
     "Popup (large)": "Popup (velký)",
     "Popup content style": "Styl obsahu popupu",
@@ -406,7 +402,6 @@
     "Until": "Dokud",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Příklad: klíč1,klíč2|Popisek 2, klíč3|Popisek 3|checkbox",
     "Edit in OpenStreetMap": "Upravit v OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Nelze určit sloupce zeměpisné šířky a délky.",
     "Back to layers": "Zpět na vrstvy",
     "Filters": "Filtry",
     "Comma separated list of properties to use when filtering features by text input": "Čárkami oddělený seznam vlastností pro filtrování objektů podle zadávání textu",
@@ -543,5 +538,47 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Text color",
+    "Text offset": "Text offset",
+    "Text position": "Text position",
+    "start": "start",
+    "center": "center",
+    "end": "end",
+    "Text repeat": "Text repeat",
+    "Text rotate": "Text rotate",
+    "Text size": "Text size",
+    "Load map template": "Load map template",
+    "My templates": "My templates",
+    "From staff": "From staff",
+    "From community": "From community",
+    "You must select a template.": "You must select a template.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
