--- a/umap/static/umap/locale/lt.json
+++ b/umap/static/umap/locale/lt.json
@@ -16,7 +16,6 @@
     "Activate slideshow mode": "Activate slideshow mode",
     "Add a layer": "Pridėti sluoksnį",
     "Add a line to the current multi": "Add a line to the current multi",
-    "Add a new property": "Pridėti naują savybę",
     "Add a polygon to the current multi": "Add a polygon to the current multi",
     "Add image URL": "Add image URL",
     "Advanced actions": "Sudėtingesni veiksmai",
@@ -29,7 +28,6 @@
     "Animated transitions": "Animated transitions",
     "Are you sure you want to clone this map and all its datalayers?": "Ar tikrai norite nukopijuoti šį žemėlapį ir visus jo duomenų sluoksnius?",
     "Are you sure you want to delete this map?": "Ar Jūs tikrai norite ištrinti šį žemėlapį?",
-    "Are you sure you want to delete this property on all the features?": "Ar tikrai norite pašalinti šią savybę visiem objektams?",
     "Are you sure you want to restore this version?": "Are you sure you want to restore this version?",
     "Attach the map to my account": "Attach the map to my account",
     "attribution": "atributai",
@@ -157,7 +155,6 @@
     "Format": "Formatas",
     "From zoom": "Mažiausias mastelis",
     "full backup": "full backup",
-    "Generic": "Generic",
     "GeoRSS (only link)": "GeoRSS (tik nuoroda)",
     "GeoRSS (title + image)": "GeoRSS (pavadinimas + paveikslas)",
     "Go to \"{coords}\"": "Go to \"{coords}\"",
@@ -273,7 +270,6 @@
     "Please be sure the licence is compliant with your use.": "Prašom pasitikrinti ar licezija tikrai tinka Jūsų poreikiams.",
     "Please choose a format": "Pasirinkite formatą",
     "Please enter the name of the property": "Įveskite, prašom, savybės pavadinimą",
-    "Please enter the new name of this property": "Įveskite, prašom, naują savybės pavadinimą",
     "Please save the map first": "Please save the map first",
     "Popup (large)": "Popup (large)",
     "Popup content style": "Popup content style",
@@ -406,7 +402,6 @@
     "Until": "Until",
     "Example: key1,key2|Label 2,key3|Label 3|checkbox": "Example: key1,key2|Label 2,key3|Label 3|checkbox",
     "Edit in OpenStreetMap": "Edit in OpenStreetMap",
-    "Cannot determine latitude and longitude columns.": "Cannot determine latitude and longitude columns.",
     "Back to layers": "Back to layers",
     "Filters": "Filters",
     "Comma separated list of properties to use when filtering features by text input": "Comma separated list of properties to use when filtering features by text input",
@@ -543,5 +538,47 @@
     "Back to list": "Back to list",
     "Toggle rule": "Toggle rule",
     "Delete rule": "Delete rule",
-    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes."
+    "Cannot save layer, please try again in a few minutes.": "Cannot save layer, please try again in a few minutes.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
+    "More help resources": "More help resources",
+    "This map is a template": "This map is a template",
+    "Add text along path": "Add text along path",
+    "Text color": "Text color",
+    "Text offset": "Text offset",
+    "Text position": "Text position",
+    "start": "start",
+    "center": "center",
+    "end": "end",
+    "Text repeat": "Text repeat",
+    "Text rotate": "Text rotate",
+    "Text size": "Text size",
+    "Load map template": "Load map template",
+    "My templates": "My templates",
+    "From staff": "From staff",
+    "From community": "From community",
+    "You must select a template.": "You must select a template.",
+    "Line decoration": "Line decoration",
+    "Reuse this template": "Reuse this template",
+    "Create a new map using this template": "Create a new map using this template",
+    "Save template": "Save template",
+    "Load template": "Load template",
+    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
+    "Load template with data": "Load template with data",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
+    "There is no public template yet.": "There is no public template yet.",
+    "Explore": "Explore",
+    "Import data from public open data portals": "Import data from public open data portals",
+    "Choose a portal": "Choose a portal",
+    "Limit results to current map view": "Limit results to current map view",
+    "Please choose an instance first.": "Please choose an instance first.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
+    "Add a new field": "Add a new field",
+    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
+    "Please enter the new name of this field": "Please enter the new name of this field",
+    "Cannot process MultiPoint": "Cannot process MultiPoint",
+    "Manage Fields": "Manage Fields",
+    "Rename this field": "Rename this field",
+    "Delete this field": "Delete this field",
+    "Double click to edit the name": "Double click to edit the name"
 }
